# pcc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
examples/: json.cpp  obj.cpp
pcc/: CMakeLists.txt  pcc.hpp
pcc/combinators/: alternative.hpp  optional.hpp  product.hpp  sum.hpp
pcc/core/: common.hpp  option.hpp  parse_result.hpp  result.hpp
pcc/parsers/: arithmetic.hpp  basic.hpp  char.hpp  escaped.hpp  map.hpp  one_of.hpp  parser.hpp  take.hpp
pcc/sequence/: many.hpp  separated_list.hpp
test/: CMakeLists.txt  core.test.cpp
test/parsers/: escaped.test.cpp  map.test.cpp  one_of.test.cpp
